1、xcode8使用的Trait Variations适配布局（比sizeclass更生动）
升级xcode8之后，打开storyboard发现xcode7适配界面的size class被Trait Variations所取代，尽管看起来变化很大，但实际原理是一样的。
点击orientation框右侧的Vary for Traits 会弹出选择Width还是Height，通过组合, 左边显示的设备也会变化
1、为竖屏添加约束
在orientation框 选择竖屏图标
同时选择Width和height，右侧横屏的设备消失
点击Done Varying按钮完成对约束的添加
2、为横屏添加约束
在orientation框 选择横屏图标，同时选择height

--- a/CustomUIPresentationController/Base.lproj/Main.storyboard
+++ b/CustomUIPresentationController/Base.lproj/Main.storyboard
@@ -1,26 +1,86 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11134" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11201" systemVersion="16A323" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11106"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11161"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="480" height="320"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3Vp-sU-HPV">
+                                <color key="backgroundColor" red="1" green="0.50196078430000002" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="10" id="FBR-Wq-HcJ"/>
+                                    <constraint firstAttribute="height" constant="128" id="bPi-vy-Bgg"/>
+                                </constraints>
+                                <variation key="default">
+                                    <mask key="constraints">
+                                        <exclude reference="FBR-Wq-HcJ"/>
+                                        <exclude reference="bPi-vy-Bgg"/>
+                                    </mask>
+                                </variation>
+                                <variation key="heightClass=compact">
+                                    <mask key="constraints">
+                                        <include reference="FBR-Wq-HcJ"/>
+                                    </mask>
+                                </variation>
+                                <variation key="heightClass=regular-widthClass=compact">
+                                    <mask key="constraints">
+                                        <include reference="bPi-vy-Bgg"/>
+                                    </mask>
+                                </variation>
+                            </view>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="3Vp-sU-HPV" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="51" id="FST-dS-kfP"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="3Vp-sU-HPV" secondAttribute="trailing" constant="52" id="HCB-bf-r0G"/>
+                            <constraint firstAttribute="trailing" secondItem="3Vp-sU-HPV" secondAttribute="trailing" constant="50" id="O3Z-Vg-5xY"/>
+                            <constraint firstItem="3Vp-sU-HPV" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" constant="50" id="RJs-Yr-JbU"/>
+                            <constraint firstAttribute="bottom" secondItem="3Vp-sU-HPV" secondAttribute="bottom" constant="50" id="RMz-5P-Asu"/>
+                            <constraint firstItem="3Vp-sU-HPV" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="249" id="XNT-vu-evj"/>
+                        </constraints>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="FST-dS-kfP"/>
+                                <exclude reference="HCB-bf-r0G"/>
+                                <exclude reference="O3Z-Vg-5xY"/>
+                                <exclude reference="RJs-Yr-JbU"/>
+                                <exclude reference="RMz-5P-Asu"/>
+                                <exclude reference="XNT-vu-evj"/>
+                            </mask>
+                        </variation>
+                        <variation key="heightClass=compact">
+                            <mask key="constraints">
+                                <include reference="O3Z-Vg-5xY"/>
+                                <include reference="RJs-Yr-JbU"/>
+                                <include reference="RMz-5P-Asu"/>
+                            </mask>
+                        </variation>
+                        <variation key="heightClass=regular-widthClass=compact">
+                            <mask key="constraints">
+                                <include reference="FST-dS-kfP"/>
+                                <include reference="HCB-bf-r0G"/>
+                                <include reference="XNT-vu-evj"/>
+                            </mask>
+                        </variation>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="140" y="133"/>
         </scene>
     </scenes>
 </document>
