--- a/CustomUIPresentationController/Base.lproj/Main.storyboard
+++ b/CustomUIPresentationController/Base.lproj/Main.storyboard
@@ -16,7 +16,7 @@
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="480" height="320"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3Vp-sU-HPV">
@@ -42,18 +42,63 @@
                                     </mask>
                                 </variation>
                             </view>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Iqa-qr-aki">
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="42" id="Kwg-W5-At2"/>
+                                    <constraint firstAttribute="height" constant="21" id="P0P-KF-FNE"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                                <variation key="heightClass=compact">
+                                    <mask key="constraints">
+                                        <exclude reference="Kwg-W5-At2"/>
+                                        <exclude reference="P0P-KF-FNE"/>
+                                    </mask>
+                                </variation>
+                                <variation key="heightClass=compact-widthClass=compact">
+                                    <fontDescription key="fontDescription" type="system" pointSize="32"/>
+                                    <color key="textColor" red="1" green="0.50196078430000002" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                </variation>
+                            </label>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="8Zv-wB-FVY">
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="240" id="0Fg-UO-XNc"/>
+                                    <constraint firstAttribute="height" constant="128" id="8Mt-tY-ptb"/>
+                                </constraints>
+                                <variation key="heightClass=compact-widthClass=compact" image="present.jpg"/>
+                            </imageView>
+                            <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="YPo-MM-xoB">
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="31" id="8ol-O7-DrN"/>
+                                    <constraint firstAttribute="width" constant="49" id="Ez7-7f-aX7"/>
+                                </constraints>
+                            </switch>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
+                            <constraint firstItem="Iqa-qr-aki" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="10" id="8Tb-OH-n01"/>
+                            <constraint firstItem="YPo-MM-xoB" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="10" id="C5b-Hl-H5t"/>
                             <constraint firstItem="3Vp-sU-HPV" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="51" id="FST-dS-kfP"/>
                             <constraint firstAttribute="trailingMargin" secondItem="3Vp-sU-HPV" secondAttribute="trailing" constant="52" id="HCB-bf-r0G"/>
+                            <constraint firstItem="Iqa-qr-aki" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="114" id="MZi-1D-iTv"/>
+                            <constraint firstItem="Iqa-qr-aki" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="10" id="NTv-2t-Ia0"/>
                             <constraint firstAttribute="trailing" secondItem="3Vp-sU-HPV" secondAttribute="trailing" constant="50" id="O3Z-Vg-5xY"/>
                             <constraint firstItem="3Vp-sU-HPV" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" constant="50" id="RJs-Yr-JbU"/>
                             <constraint firstAttribute="bottom" secondItem="3Vp-sU-HPV" secondAttribute="bottom" constant="50" id="RMz-5P-Asu"/>
                             <constraint firstItem="3Vp-sU-HPV" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="249" id="XNT-vu-evj"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="YPo-MM-xoB" secondAttribute="bottom" constant="10" id="aZ4-mt-rKu"/>
+                            <constraint firstItem="8Zv-wB-FVY" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="114" id="r8E-ZV-yam"/>
+                            <constraint firstItem="Iqa-qr-aki" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="166" id="rDd-sG-y5k"/>
+                            <constraint firstItem="8Zv-wB-FVY" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="51" id="yEL-wp-xCI"/>
                         </constraints>
                         <variation key="default">
+                            <mask key="subviews">
+                                <exclude reference="YPo-MM-xoB"/>
+                            </mask>
                             <mask key="constraints">
+                                <exclude reference="8Tb-OH-n01"/>
+                                <exclude reference="NTv-2t-Ia0"/>
                                 <exclude reference="FST-dS-kfP"/>
                                 <exclude reference="HCB-bf-r0G"/>
                                 <exclude reference="O3Z-Vg-5xY"/>
@@ -64,9 +109,18 @@
                         </variation>
                         <variation key="heightClass=compact">
                             <mask key="constraints">
+                                <include reference="8Tb-OH-n01"/>
+                                <exclude reference="MZi-1D-iTv"/>
+                                <include reference="NTv-2t-Ia0"/>
+                                <exclude reference="rDd-sG-y5k"/>
                                 <include reference="O3Z-Vg-5xY"/>
                                 <include reference="RJs-Yr-JbU"/>
                                 <include reference="RMz-5P-Asu"/>
+                            </mask>
+                        </variation>
+                        <variation key="heightClass=compact-widthClass=compact">
+                            <mask key="subviews">
+                                <include reference="YPo-MM-xoB"/>
                             </mask>
                         </variation>
                         <variation key="heightClass=regular-widthClass=compact">
@@ -83,4 +137,7 @@
             <point key="canvasLocation" x="140" y="133"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="present.jpg" width="1450" height="432"/>
+    </resources>
 </document>
